--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,17 +1,21 @@
-.search-container{
+.shop-container{
+display: grid;
+grid-template-columns: 3fr 1fr;
+}
+
+.cart-container{
+ border-left: 1px solid lightgray;
+padding-left: 5px;
+}
+.product-container{
+    padding-left: 50px;
+}
+
+.search-box{
     background-color: rgba(0, 0, 0, 0.85);
     text-align: center;
     line-height: 40px;
 }
-.search-container input{
-    width: 75%;
-}
-.shop-container{
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
-.product-container{
-    border-right: 1px solid lightgray;
-    margin-right: 5px;
-    margin-left: 50px;
+.input-field{
+    width: 50%;
 }
