--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,21 +1,26 @@
-.product{
+.product-details{
     display: flex;
     border-bottom: 1px solid lightgray;
     margin-right: 5px;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
+    
+
 }
+
 .product-name{
     color: blue;
-    font-weight: 400;
+
 }
 .btn-regular{
     background-color: goldenrod;
     width: 150px;
     height: 25px;
-    border: 1px solid gray;
+    border: 1px solid gray ;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: 700;
+
 }
-.icon-color{
-    color: gold;
+.icon{
+    color: rgb(153, 17, 39);
 }
